@@ -30,6 +30,7 @@ Changes since 5.0b1
       options struct, to allow setting of their options directly
       from mpoption(). Incremented MATPOWER options struct version
       to 2.
+    - Added tests for multiple linprog() algorithms to t_opf_dc_ot().
 
 10/10/14
     - Added 'sqp' algorithm option for fmincon.alg, not suitable
